--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,7 @@
     <ul>
         <li><a href="{% url 'Index' %}">index </a></li>
         <li><a href="{% url 'publisher_list' %}">wydawcy</a></li>
+        <li><a href="{% url 'publisher_add' %}">dodaj wydawce</a></li>
     </ul>
 </div>
 <div>
