--- a/templates/add_publisher.html
+++ b/templates/add_publisher.html
@@ -2,7 +2,7 @@
 {% block zawartosc %}
     <form method="post">
         {% csrf_token %}
-    <input type="text" name="name" placeholder="Nazwa">
+    <input type="text" name="name" placeholder="Nazwa" value="{{ publisher.name }}">
     <input type="submit">
     </form>
 {% endblock %}
