--- a/templates/base.html
+++ b/templates/base.html
@@ -1,51 +1,56 @@
-<!doctype html>
-
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pasek z przyciskami</title>
-    <style>
-        .button-bar {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 50px;
-            background-color: #F1F1F1;
-        }
+<style>
+ul.nav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
 
-        .button-bar button {
-            margin: 0 10px;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            background-color: #4CAF50;
-            color: white;
-            font-size: 16px;
-            cursor: pointer;
-        }
-    </style>
+li.nav {
+  float: left;
+  border-right:1px solid #bbb;
+}
+
+li:last-child {
+  border-right: none;
+}
+
+li.nav a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li.nav a:hover:not(.active) {
+  background-color: #111;
+}
+
+.active {
+  background-color: #04AA6D;
+}
+</style>
 </head>
 <body>
-<div class="button-bar">
-    <ul>
-        <li><a href="{% url 'Index' %}">index </a></li>
-        <li><a href="{% url 'publisher_list' %}">wydawcy</a></li>
-        <li><a href="{% url 'publisher_add' %}">dodaj wydawce</a></li>
-        <li><a href="{% url 'categories_list' %}">kategorie</a></li>
-        <li><a href="{% url 'category_add' %}">dodaj kategorie</a></li>
+
+<ul class="nav">
+        <li class="nav"><a href="{% url 'Index' %}">index </a></li>
+        <li class="nav"><a href="{% url 'publisher_list' %}">wydawcy</a></li>
+        <li class="nav"><a href="{% url 'publisher_add' %}">dodaj wydawce</a></li>
+        <li class="nav"><a href="{% url 'categories_list' %}">kategorie</a></li>
+        <li class="nav"><a href="{% url 'category_add' %}">dodaj kategorie</a></li>
+        <li class="nav"><a href="{% url 'add_author' %}">dodaj autora</a></li>
+        <li class="nav"><a href="{% url 'author_list' %}">lista autorów</a></li>
+
     </ul>
-</div>
-<div>
-    {% block zawartosc %}
-        ala ma kota
-    {% endblock %}
-<div>
-Publishers: {{ pc }}
-  
-</div>
-</div>
+    <div>
+        {% block zawartosc %}
+        {% endblock %}
+    </div>
 </body>
 </html>
