book generic list view

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,10 @@
     <li class="nav"><a href="{% url 'author_list' %}">lista autorów</a></li>
     <li class="nav"><a href="{% url 'book_list' %}">książki</a></li>
     <li class="nav"><a href="{% url 'book_add' %}">dodaj książke</a></li>
+</ul>
+<ul class="nav">
 
+    <li class="nav"><a href="{% url 'book_generic_list' %}">książki G</a></li>
 
 </ul>
 <div>
