--- a/templates/list_view.html
+++ b/templates/list_view.html
@@ -2,7 +2,7 @@
 {% block zawartosc %}
     <ul>
     {% for obj in object_list %}
-        <li>{{ obj }}</li>
+        <li><a href="{{ obj.get_detail_url }}" >{{ obj }}</a></li>
     {% endfor %}
     <ul>
 {% endblock %}
