--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,9 @@
 <ul class="nav">
 
     <li class="nav"><a href="{% url 'book_generic_list' %}">książki G</a></li>
+    <li class="nav"><a href="{% url 'book_generic_add' %}">dodaj Ksiązke G</a></li>
     <li class="nav"><a href="{% url 'author_generic_list' %}">Authorzy G</a></li>
+
 
 </ul>
 <div>
