--- a/templates/form.html
+++ b/templates/form.html
@@ -1,8 +1,4 @@
 {% extends 'base.html' %}
 {% block zawartosc %}
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit">
-    </form>
+    {% include 'basic_form.html' %}
 {% endblock %}
